smaller font size - fixes menu bar. allow menu items to scale. nothing broken in layout now!

--- a/style.css
+++ b/style.css
@@ -4,15 +4,11 @@
     left: 0px;
 }
 
-h1 {
-  font-family: Helvetica;
-  font-weight: 100;
-}
-
 body {
   color: black;
   text-align:center;
   font-family: arial;
+  font-size: small;
 }
 
 .top {
@@ -84,7 +80,7 @@ body {
 
 .nav ul a {
     display: block;
-    height: 15px;
+    /*height: 15px;*/
     padding: 7px 8px;
     color: #black;
     text-decoration: none;
@@ -94,4 +90,3 @@ body {
 .nav ul li a:hover {
     color: #069;
 }
-
